--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ pylint==1.4.4
 selenium==2.48.0
 django-storages==1.4
 boto==2.39.0
+-e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
+-e git+https://github.com/HearthSim/python-hearthstone.git#egg=hearthstone
