--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ django-storages==1.4
 boto==2.39.0
 -e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
 -e git+https://github.com/HearthSim/python-hearthstone.git#egg=hearthstone
+django-allauth==0.24.1
