--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ selenium==2.48.0
 -e git+https://github.com/HearthSim/python-hearthstone.git#egg=hearthstone
 django-allauth==0.24.1
 whitenoise==2.0.6
+boto3==1.3.0
