--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Django==1.8
 gunicorn==18.0
-mysqlclient==1.3.7
 requests==2.8.1
 wheel==0.24.0
 django-nose==1.4.2
@@ -12,3 +11,4 @@ selenium==2.48.0
 django-allauth==0.24.1
 whitenoise==2.0.6
 boto3==1.3.0
+psycopg2==2.6.1
