--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ hearthstone
 django-allauth==0.24.1
 whitenoise==2.0.6
 boto3==1.3.0
-psycopg2==2.6.1
+mysqlclient==1.3.7
+enum34==1.1.2
+PyMySQL==0.7.2
