--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ nosexcover==1.0.10
 pylint==1.4.4
 selenium==2.48.0
 -e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
-hearthstone
+https://github.com/HearthSim/python-hearthstone/zipball/master
+-e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
 django-allauth==0.24.1
 whitenoise==2.0.6
 boto3==1.3.0
