--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ pylint==1.4.4
 selenium==2.48.0
 -e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
 https://github.com/HearthSim/python-hearthstone/zipball/master
+#git+https://github.com/HearthSim/python-hearthstone#egg=hearthstone
+#hearthstone
 -e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
 django-allauth==0.24.1
 whitenoise==2.0.6
