--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ whitenoise==2.0.6
 mysqlclient==1.3.7
 enum34==1.1.2
 PyMySQL==0.7.2
-django-storages==1.4.1
-boto==2.40.0
+#django-storages==1.4.1
+#We need django-storages to use boto3 to benefit from AWS Lambda configuration so using this fork until its merged in
+git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
+#boto==2.40.0
 boto3==1.3.0
 pytz==2016.4
 python-dateutil
