--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 boto3==1.3.0
 pytz==2016.4
 python-dateutil
+mock==2.0.0
