--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ django-nose==1.4.2
 nosexcover==1.0.10
 pylint==1.4.4
 selenium==2.48.0
--e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
 hearthstone
 -e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
 django-allauth==0.24.1
@@ -14,10 +13,8 @@ whitenoise==2.0.6
 mysqlclient==1.3.7
 enum34==1.1.2
 PyMySQL==0.7.2
-django-storages==1.4.1
-#We need django-storages to use boto3 to benefit from AWS Lambda configuration so using this fork until its merged in
-#git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
-boto==2.40.0
+#This fork allows us to use Boto3
+git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 boto3==1.3.0
 pytz==2016.4
 python-dateutil
