--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pylint==1.4.4
 selenium==2.48.0
 hearthstone
 -e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
+-e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
 django-allauth==0.24.1
 whitenoise==2.0.6
 mysqlclient==1.3.7
