--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,5 @@ git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 boto3==1.3.0
 pytz==2016.4
 python-dateutil
+lxml==3.6.0
 mock==2.0.0
