--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,6 @@ git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 boto3==1.3.0
 pytz==2016.4
 python-dateutil
+humanize==0.5.1
 lxml==3.6.0
 mock==2.0.0
