--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 allauth_battlenet==0.9.4
 Django==1.9.6
+django-allauth==0.25.2
+django-nose==1.4.3
+# boto3 compatible fork
+git+https://github.com/mbarrien/django-storages.git@boto3-new#egg=django-storages
+djangorestframework==3.3.3
 gunicorn==19.5.0
 requests==2.10.0
 wheel==0.29.0
-django-nose==1.4.3
 nosexcover==1.0.10
 pylint==1.5.5
 selenium==2.53.2
 hearthstone
 -e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
 -e git+https://github.com/amw2104/HSReplayParser#egg=hsreplayparser
-django-allauth==0.25.2
 whitenoise==3.1
 mysqlclient==1.3.7
 enum34==1.1.6
 PyMySQL==0.7.2
-#This fork allows us to use Boto3
-git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 boto3==1.3.1
 pytz==2016.4
 python-dateutil
