--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ nosexcover==1.0.10
 pylint==1.5.5
 selenium==2.53.2
 hearthstone
--e git+https://github.com/HearthSim/HSReplay#egg=hsreplay&subdirectory=python
+hsreplay==1.2.2
 whitenoise==3.1
 mysqlclient==1.3.7
 enum34==1.1.6
